--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@
   display: flex;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -178,13 +182,6 @@ text-transform: capitalize;
 
 body {
   max-width: 1920px;
-  /* background-color: rgb(161, 161, 194); */
-}
-
-@media (max-width: 1440px) {
-  body {
-    background-color: gray;
-  }
 }
 
 /* end  ( to be deleted ) */
@@ -197,7 +194,6 @@ body {
 .main {
   background: var(--primary-bg-color);
   padding-bottom: 34px;
-  /* padding-bottom: 1000px;  to be deleted */
 }
 
 /* Navbar */
@@ -298,12 +294,52 @@ body {
 /* NewsLetter */
 
 .newsletter .medium-container {
-  /* height: 300px; */
-  /* background: #080B44; */
   padding-block: 134px;
 }
 
 .newsletter-paragraph {
-  margin: 18px auto 10px auto;
+  margin: 18px auto 44px auto;
   max-width: 709px;
 } 
+
+.newsletter input[type='text'] {
+  width: 100%;
+  max-width: 766px;
+  padding: 21px 30px;
+  border-radius: 106px;
+  border: 1px solid #ececee;
+}
+
+.newsletter input[type='button'] {
+  padding: 20px 42px;
+  border-radius: 38px;
+  background-color: #000;
+  color: var(--primary-text-color);
+  top: 0;
+  right: 290px;
+}
+
+/* Footer */
+
+.footer {
+  background-color: #000;
+  padding: 90px 0 200px 0;
+}
+
+.footer-links h5 {
+  margin-bottom: 35px;
+}
+
+.footer-link-items {
+  gap: 30px;
+}
+
+.footer-link-items a {
+  color: var(--primary-text-color);
+  text-decoration: none;
+}
+
+.footer-link-items iframe {
+  max-width: 298px;
+  height: 173px;
+}
